# react-native-lz4

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-lz4.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/lz4/: Lz4Module.kt  Lz4Package.kt
android/src/newarch/: Lz4Spec.kt
android/src/oldarch/: Lz4Spec.kt
cpp/: lz4.c  react-native-lz4.cpp  react-native-lz4.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: .xcode.env  File.swift  Podfile
example/src/: App.tsx
example/src/components/: OptionButton.tsx  ProgressBar.tsx  PropertyLabel.tsx
ios/: Lz4.h  Lz4.mm
src/: NativeLz4.ts  index.tsx  module.ts  types.ts
src/__tests__/: index.test.ts
src/utils/: formatFilePath.ts
src/utils/__tests__/: formatFilePath.test.ts
